# osim-play

./: .gitmodules  CMakeLists.txt  README.md
scripts/: activate  analyze_callcounts  analyze_wrapping  click-all-viz-windows  extract_callcount  plot_callcounts  plot_positions.py  plot_wrapping  run-both  unix_e2e_build
src/: OpenSimPartyDemoCable.cpp  ak_wrapcylinder.hpp  expt_wrap.cpp  fd.cpp  joris2.cpp  joris2_simbody.cpp  joris_in-simbody.cpp  joris_two_block_wrap.cpp  opensim_wrapping.cpp  rajagopal_wrapping_comparison.cpp  simbody_wrapping.cpp
